libs/pavex_cli/tests/ui_tests/non_static_methods_are_not_supported/expectations/stderr.txt
[31m[1mERROR[0m[39m: 
  × One of the input parameters for `app::Streamer::stream_file` has a type
  │ that I cannot handle.
    ╭─[src/lib.rs:12:1]
 12 │     let mut bp = Blueprint::new();
 13 │     bp.route(GET, "/home", f!(crate::Streamer::stream_file));
    ·                            ────────────────┬───────────────
    ·                                            ╰── The request handler was registered here
 14 │     bp
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:5:1]
 5 │ impl Streamer {
 6 │     pub fn stream_file(&self) -> pavex_runtime::response::Response {
   ·                        ──┬──
   ·                          ╰── I do not know how handle this parameter
 7 │         todo!()
   ╰────